# SoundIL

./: .env copy  .gitignore  .gitmodules  README.md  eval.sh  pyproject.toml  run_task_on_singularity.sh  singularity.def  train.sh
URDF/box/: box.urdf
datasets/: concat_data.py
datasets/2sound/meta/: episodes.jsonl
datasets/2sound_0/meta/: episodes_stats.jsonl  info.json
datasets/dummy-ep100/meta/: episodes.jsonl  episodes_stats.jsonl
datasets/dummy-ep150/meta/: episodes.jsonl  episodes_stats.jsonl
datasets/dummy-ep200/meta/: episodes.jsonl
datasets/dummy-ep50/meta/: episodes.jsonl  episodes_stats.jsonl
datasets/dummy/meta/: episodes_stats.jsonl  tasks.jsonl
datasets/dummy_0/meta/: episodes.jsonl  episodes_stats.jsonl
datasets/dummy_1/meta/: episodes.jsonl  episodes_stats.jsonl  info.json
datasets/marker_sound-ep100/meta/: tasks.jsonl
datasets/marker_sound-ep150/meta/: episodes.jsonl  episodes_stats.jsonl
datasets/marker_sound-ep200/meta/: episodes_stats.jsonl  info.json
datasets/marker_sound-ep50/meta/: episodes.jsonl  episodes_stats.jsonl
datasets/marker_sound/meta/: episodes_stats.jsonl
datasets/real_sound/meta/: episodes.jsonl  episodes_stats.jsonl  info.json  tasks.jsonl
datasets/sound/meta/: info.json  (+1 more)
docs/: real.md  sim.md
env/: __init__.py  genesis_env.py  myenv.py
env/tasks/: sound.py  test.py  test_sound.py  two_sound.py
src/: control_robot.py  control_sim_robot.py  control_sound_test.py  doa_test.py  eval_policy.py  evaluate_policy.py  gym_env_test.py  main.py  make_sim_dataset.py  notify.py
workspace/: main.py
(+1065 files in other folders)
