[project]
name = "sound-dp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.30.2",
    "pulsectl>=24.12.0",
    "py-cpuinfo>=9.0.0",
    "pyroomacoustics>=0.8.3",
    "sounddevice>=0.5.1",
    "taichi>=1.7.3",
    "transformers>=4.51.3",
]
